fix hotel image spacing on large screens

--- a/src/scss/sections/_hotels.scss
+++ b/src/scss/sections/_hotels.scss
@@ -5,6 +5,10 @@
 .hotel-section {
     padding: 10rem 0;
 
+    img.object-fit-cover {
+        min-height: 100%;
+    }
+
     .featured-text {
         padding: 2rem;
 
